<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetBack</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_category_operation">User Configuration</string>
    <string name="pref_category_primary">Primary Actions</string>
    <string name="pref_category_advanced">Advanced Actions</string>
    <string name="pref_category_notification">Notification</string>
    <string name="pref_category_help">Help</string>
    <string name="pref_title_mode">Mode</string>
    <string name="pref_string_active">GetBack running in hidden mode.</string>
    <string name="pref_string_inactive">GetBack is deactivated</string>
    <string name="pref_summaryon_photo">Email includes captured photo</string>
    <string name="pref_summaryoff_photo">Check to capture photo on theft</string>
    <string name="pref_summaryon_location">SMS includes current location</string>
    <string name="pref_summaryoff_location">Check to detect location on theft</string>
    <string name="pref_summaryon_contacts">Delete contacts with SMS command</string>
    <string name="pref_summaryoff_contacts">Check to delete contacts on theft</string>
    <string name="pref_summaryon_sms">Delete messages with SMS command</string>
    <string name="pref_summaryoff_sms">Check to delete messages on theft</string>
    <string name="pref_summaryon_formatsd">Format SD card with SMS command</string>
    <string name="pref_summaryoff_formatsd">Check to format SD card on theft</string>
    <string name="pref_summaryon_email">Delete inbox with SMS command</string>
    <string name="pref_summaryoff_email">Check to delete inbox on theft</string>
    <string name="pref_summaryon_account">Delete accounts with SMS command</string>
    <string name="pref_summaryoff_account">Check to delete accounts on theft</string>
    <string name="pref_summary_revoke_no">To launch GetBack when it is hidden, dial - </string>
    <string name="pref_summary_register_email">Register your email for GetBack notification</string>
    <string name="pref_summary_register_contact_no">Register alternate contact no for GetBack notification</string>
    <string name="pref_summary_command_text">Configure a unique command text</string>
    <string name="pref_summary_command_no_1">Configure a unique command number for primary actions</string>
    <string name="pref_summary_command_no_2">Configure a unique command number for advanced actions</string>
    <string name="pref_summary_help_enable">Check to enable help at startup</string>
    <string name="pref_summary_no_front_camera">You need front camera to enable this setting</string>
    <string name="pref_on">On</string>
    <string name="pref_off">Off</string>
    <string name="pref_title_choose_email">Email</string>
    <string name="pref_title_alternative_no">Alternate Number</string>
    <string name="pref_title_revoke_no">Revoke Setup</string>
    <string name="pref_title_command_text">Command Text</string>
    <string name="pref_title_command_no">Command Number</string>
    <string name="pref_title_capture">Photo</string>
    <string name="pref_title_location">Current Location</string>
    <string name="pref_title_contacts">Contacts</string>
    <string name="pref_title_sms">SMS</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_format_sd">Format SD Card</string>
    <string name="pref_title_accounts">Accounts</string>
    <string name="pref_title_settings">Settings</string>
    <string name="pref_title_show_help">Show Help</string>
    <string name="pref_key_email">pref_key_email</string>
    <string name="pref_key_alternative_no">pref_key_alternative_no</string>
    <string name="pref_key_revoke_setup">pref_key_revoke_setup</string>
    <string name="pref_key_command_text">pref_key_command_text</string>
    <string name="pref_key_command_number_1">pref_key_command_number_1</string>
    <string name="pref_key_command_number_2">pref_key_command_number_2</string>
    <string name="pref_key_operation_mode">pref_key_operation_mode</string>
    <string name="pref_key_capture">pref_key_capture</string>
    <string name="pref_key_location">pref_key_location</string>
    <string name="pref_key_contacts">pref_key_contacts</string>
    <string name="pref_key_sms">pref_key_sms</string>
    <string name="pref_key_sdcard_format">pref_key_sdcard_format</string>
    <string name="pref_key_remove_account">pref_key_remove_account</string>
    <string name="pref_key_help_enable">pref_key_help_enable</string>
    <string name="pref_key_ad">pref_key_ad</string>
    <string name="pref_key_parent_preference">pref_key_parent_preference</string>
    <string name="string_enter_command_text">Unique command text</string>
    <string name="string_enter_command_no">Unique command No.</string>
    <string name="string_enter_revoke_no">Revocation No.</string>
    <string name="tv_choose_command_text">Text</string>
    <string name="tv_choose_command_number">Number</string>
    <string name="tv_choose_command_help">Command Format will be - Text::Number</string>
    <string name="toast_setup_revoke">GetBack is hidden now. Please remember revoke number to launch it</string>
    <string name="default_revoke_number">123456789</string>
    <string name="app_version">1.3</string>
    <string name="about_heading">GetBack assist you in Phone recovery if it is stolen. It acts as in-mobile Agent and provide protection against phone theft.</string>
    <string name="about_feedback_heading">Please provide your valuable feedback without hesitation. You can also report a bug or feature request if you need.</string>
    <string name="about_rating_heading">If you feel this application is useful please rate us on Marketplace. </string>
    <string name="bt_text_feedback">Feedback</string>
    <string name="bt_rate_getback">Rate GetBack</string>

</resources>